updated lambda install script for build

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -56,6 +56,13 @@
       "service": "Lambda"
     }
   },
+  "hosting": {
+    "amplifyhosting": {
+      "lastPushTimeStamp": "2023-09-08T21:42:20.312Z",
+      "service": "amplifyhosting",
+      "type": "cicd"
+    }
+  },
   "parameters": {
     "AMPLIFY_function_upliftingquoteLamba_deploymentBucketName": {
       "usedBy": [
@@ -70,6 +77,22 @@
         {
           "category": "function",
           "resourceName": "upliftingquoteLamba"
+        }
+      ]
+    },
+    "AMPLIFY_hosting_amplifyhosting_appId": {
+      "usedBy": [
+        {
+          "category": "hosting",
+          "resourceName": "amplifyhosting"
+        }
+      ]
+    },
+    "AMPLIFY_hosting_amplifyhosting_type": {
+      "usedBy": [
+        {
+          "category": "hosting",
+          "resourceName": "amplifyhosting"
         }
       ]
     }
