--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "aws-amplify": "^5.3.10",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.17",
-    "next": "13.4.17",
+    "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lottie-player": "^1.5.5",
